# python-for-pricing-course

./: .dockerignore  .gitignore  LICENSE  README.md  dockerfile  main.py  main.tf  mkdocs.yml  pyproject.toml
.github/workflows/: azure-static-web-apps-green-glacier-0b2b11003.yml
demo-code/: app.py  fast_api.py  frequency-modelling.ipynb  frequency-table-Area.html  frequency-table-DrivAge.html  frequency-visuals.ipynb  modelling-data.ipynb
demo-code/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
demo-code/config/: continous_factor_visuals.json  factor_index.json  frequency_config.json
demo-code/processed-data/: holdout_frequency_predictions.parquet  severity_set.parquet
demo-code/raw-data/: claims_amounts.csv
demo-code/utils/: gbm_utils.py  glm_utils.py  modelling_utils.py  utils.py  visual_utils.py
demo_code/: fast_api.py  frequency-eda.ipynb  frequency-modelling.ipynb  frequency-table-DrivAge.html  frequency-visuals.ipynb
demo_code/config/: severity_config.json
demo_code/utils/: modelling_utils.py  visual_utils.py
docs/: index.md
docs/0. Overview/: 0.0. Course.md  0.0. Open source.md  0.0. Why use python.md  0.1. Open source.md  0.1. Why use python.md  0.2. Open source.md  0.2. Reproducible Analytics.md  0.3. Innovation.md  0.3. Reproducible Analytics.md  0.4. Innovation.md  0.4. Pricing as a system.md  0.5. Engineering practices.md  0.5. Pricing as a system.md  0.6. Engineering practices.md  0.6. Python vs Excel.md  0.7. Python vs Excel.md  0.7. Use cases.md  index.md
docs/1. Principles/: 1.0. Principles.md  1.0. Transparency.md  1.1. Reproducibility.md  1.1. System design.md  1.1. Transparency.md  1.2. Automation.md  1.2. System design.md  1.3. Automation.md  1.3. Modularity.md  1.4. Collaboration - Technical.md  1.4. Modularity.md  1.5. Collaboration - Non Technical.md  1.5. Collaboration - Technical.md  1.6. Collaboration - Non Technical.md  index.md
docs/2. Setting up/: 2.0. Personal and work machines.md  2.0. Setting Up.md  2.1. Installing WSL.md  (+18 more)
(+82 files in other folders)
