[project]
name = "python-for-pricing-course"
version = "0.1.0"
description = "Learn how to utilise python in your pricing workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.4",
    "fastapi[standard]>=0.116.1",
    "great-tables>=0.18.0",
    "imgkit>=1.2.3",
    "ipywidgets>=8.1.7",
    "kaleido>=1.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "mlflow>=3.3.2",
    "nbconvert>=7.16.6",
    "plotly>=6.2.0",
    "polars>=1.32.2",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.3",
    "selenium>=4.35.0",
    "setuptools>=80.9.0",
    "shap>=0.48.0",
    "uvicorn>=0.35.0",
    "ydata-profiling>=4.16.1",
]
